fix spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #1992d4;
-    --secondary: #d946ef;
+	--primary: #1992d4;
+	--secondary: #d946ef;
 }
 
 .content {
@@ -24,7 +24,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 48px;
-	padding: 30px 16px;
+	padding-top: 30px;
+	padding-left: 32px;
 	min-width: 240px;
 }
 
@@ -34,6 +35,8 @@
 	display: flex;
 	gap: 8px;
 	align-items: center;
+	position: relative;
+	right: 12px;
 }
 
 .persikka {
@@ -58,7 +61,7 @@
 }
 
 .icon {
-    width: 24px;
+	width: 24px;
 }
 
 /* header */
@@ -68,10 +71,10 @@
 
 	display: grid;
 	grid-template-rows: 1fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr min-content min-content;
 	align-items: center;
 
-    padding: 0px 32px;
+	padding: 8px 32px;
 }
 
 .header * {
@@ -83,7 +86,7 @@
 	gap: 16px;
 	width: 100%;
 	align-items: center;
-    grid-area: 1 / 1 / 2 / 3;
+	grid-area: 1 / 1 / 2 / 3;
 }
 
 .search > input {
@@ -94,80 +97,79 @@
 	background: #e2e8f0;
 	padding: 8px 16px;
 	outline: none;
-    margin-right: 16px;
+	margin-right: 16px;
 }
 
 .search > input:focus {
-    /* outline: 1px solid var(--primary); */
+	/* outline: 1px solid var(--primary); */
 }
 
 .profile-area {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: end;
-    gap: 24px;
-    font-weight: 500;
+	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: end;
+	gap: 24px;
+	font-weight: 500;
 }
 
 .profile-pic {
-    width: 48px;
-    height: 48px;
-    background: var(--secondary);
-    border-radius: 120px;
-    object-fit: contain;
+	width: 48px;
+	height: 48px;
+	background: var(--secondary);
+	border-radius: 120px;
+	object-fit: contain;
 }
 
 .greeting {
-    display: grid;
-    grid-template: 1fr 1fr / min-content 1fr;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-    gap: 0px 20px;
-    justify-self: start;
+	display: grid;
+	grid-template: 1fr 1fr / min-content 1fr;
+	align-items: center;
+	justify-content: center;
+	font-weight: 500;
+	gap: 0px 20px;
+	justify-self: start;
 }
 
 .greeting img {
-    grid-area: 1 / 1 / 3 / 2;
-    width: 64px;
-    height: 64px;
+	grid-area: 1 / 1 / 3 / 2;
+	width: 64px;
+	height: 64px;
 }
 .greeting .hi {
-    grid-area: 1 / 2 / 2 / 3;
-    font-size: 14px;
-    align-self: end;
-    margin: 2px 0px;
+	grid-area: 1 / 2 / 2 / 3;
+	font-size: 14px;
+	align-self: end;
+	margin: 2px 0px;
 }
 .greeting .name {
-    grid-area: 2 / 2 / 3 / 3;
-    align-self: start;
-    font-size: 24px;
-    font-weight: 700;
+	grid-area: 2 / 2 / 3 / 3;
+	align-self: start;
+	font-size: 24px;
+	font-weight: 700;
 }
 
 .greeting .hi,
 .greeting .name {
-    position: relative;
-    bottom: 5px;
+	position: relative;
+	bottom: 5px;
 }
 
 .action-btns {
-    display: flex;
-    justify-content: end;
-    gap: 16px;
-    grid-area: 2 / -3 / 3 / -1;
-    z-index: 1;
+	display: flex;
+	justify-content: end;
+	gap: 16px;
+	grid-area: 2 / -3 / 3 / -1;
+	z-index: 1;
 }
 
 .action-btns button {
-    border: none;
-    background: var(--primary);
-    color: white;
-    padding: 10px 28px;
-    border-radius: 100px;
+	border: none;
+	background: var(--primary);
+	color: white;
+	padding: 10px 28px;
+	border-radius: 100px;
 }
-
 
 /* main area */
 .main {
